[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/parachute.png" type="Texture" id=1]
[ext_resource path="res://assets/jack.png" type="Texture" id=2]
[ext_resource path="res://Actors/FallingBody.gd" type="Script" id=3]
[ext_resource path="res://Actors/FallingObjectType.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.6987, 56.7354 )

[node name="FallingBody" type="Area2D"]
script = ExtResource( 3 )

[node name="Parachute" type="Sprite" parent="."]
position = Vector2( 0, -54.372 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -25.7624 )
shape = SubResource( 1 )

[node name="ObjectType" parent="." instance=ExtResource( 4 )]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 0.265257, -27.5889 )
scale = Vector2( 2.69311, 5.62808 )
[connection signal="area_entered" from="." to="." method="_on_FallingBody_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
